Changed slam and nav2 parameters to fix out of bounds error. Added launch file for easier launch

--- a/config/nav2_params.yaml
+++ b/config/nav2_params.yaml
@@ -231,10 +231,13 @@ global_costmap:
       global_frame: map
       robot_base_frame: base_link
       use_sim_time: True
-      robot_radius: 0.22
+      rolling_window: True # originally was false
+      width: 10 # for rolling window
+      height: 10 # for rolling window
+      robot_radius: 0.65
       resolution: 0.05
       track_unknown_space: true
-      plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
+      plugins: ["obstacle_layer", "inflation_layer"] # took out static_layer
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
