--- a/config/mapper_params_online_async.yaml
+++ b/config/mapper_params_online_async.yaml
@@ -24,13 +24,13 @@ slam_toolbox:
     # map_start_at_dock: true
 
     debug_logging: false
-    throttle_scans: 1
-    transform_publish_period: 0.02 #if 0 never publishes odometry
-    map_update_interval: 5.0
+    throttle_scans: 2 # was 1
+    transform_publish_period: 0.1 #if 0 never publishes odometry, was 0.02
+    map_update_interval: 10.0 # was 5.0
     resolution: 0.05
     min_laser_range: 0.0 #for rastering images
     max_laser_range: 20.0 #for rastering images
-    minimum_time_interval: 0.5
+    minimum_time_interval: 1.0 # was 0.5
     transform_timeout: 0.2
     tf_buffer_duration: 60.0
     stack_size_to_use: 40000000 #// program needs a larger stack size to serialize large maps
